--- a/COVID19questions.Rmd
+++ b/COVID19questions.Rmd
@@ -502,4 +502,4 @@ Although the scrawled-on plot by itself provides only very weak evidence that ma
 
 During an exponentially-growing pandemic, one doesn't have time to wait for strong evidence. Wearing masks is a  plausible cause of reduced transmission, so it may be a good policy to adopt even if empirical evidence for its effectiveness is weak.
 
-
+You have reached the end! Please follow the guidelines of the health authorities in your area.
